@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 40

' Task 4 - Admin Dashboard (AFTER)
' Generated on: 2026-03-17 18:54:31
' Scope: Admin actions with Site Summary Dashboard using Builder pattern
' Generated by: generate_uml.py

package "org.apache.roller.weblogger.business.dashboard" <<dashboard>> {
  interface DashboardMetric {
  }

  class DashboardReport {
    -viewName : String
    -results : List<MetricResult>
  }

  class DashboardReportBuilder {
    -viewName : String
    -metrics : List<DashboardMetric>
    +addMetric(DashboardMetric metric) : DashboardReportBuilder
    +build() : DashboardReport
    +buildMinimalistReport() : DashboardReport
    +buildFullReport() : DashboardReport
  }

  class MetricResult {
    -name : String
    -label : String
    -value : String
    -details : List<String>
  }

  class MostCommentedWeblogMetric {
    +compute() : MetricResult
  }

  class MostStarredBlogMetric {
    +compute() : MetricResult
  }

  class TopActiveUsersMetric {
    +compute() : MetricResult
  }

  class TopCategoryMetric {
    +compute() : MetricResult
  }

  class TotalCommentsMetric {
    +compute() : MetricResult
  }

  class TotalEntriesMetric {
    +compute() : MetricResult
  }

  class TotalUsersMetric {
    +compute() : MetricResult
  }

  class TotalWeblogsMetric {
    +compute() : MetricResult
  }

}

package "org.apache.roller.weblogger.ui.struts2.admin" <<admin>> {
  class CacheInfo {
    -stats : Map<String, Map<String, Object>>
    -cache : String
    +requiredGlobalPermissionActions() : List<String>
    +myPrepare() : void
    +execute() : String
    +clear() : String
  }

  class GlobalCommentManagement {
    -log : Log
    -bean : GlobalCommentManagementBean
    -pager : CommentsPager
    -firstComment : WeblogEntryComment
    -lastComment : WeblogEntryComment
    -bulkDeleteCount : int
    -httpMethod : String
    +requiredGlobalPermissionActions() : List<String>
    +loadComments() : void
    +execute() : String
    +query() : String
    +delete() : String
    +update() : String
  }

  class GlobalCommentManagementBean {
    -searchString : String
    -startDateString : String
    -endDateString : String
    -approvedString : String
    -page : int
    -spamComments : String[]
    -deleteComments : String[]
    -ids : String
    +loadCheckboxes(List<WeblogEntryComment> comments) : void
  }

  class GlobalConfig {
    -log : Log
    -params : HttpParameters
    -properties : Map<String, RuntimeConfigProperty>
    -globalConfigDef : ConfigDef
    -pluginsList : List<WeblogEntryCommentPlugin>
    -commentPlugins : String[]
    -httpMethod : String
    -bundle : ResourceBundle
    -weblogs : Collection<Weblog>
    +requiredGlobalPermissionActions() : List<String>
    +myPrepare() : void
    +execute() : String
    +save() : String
  }

  class SiteSummary {
    -view : String
    -report : DashboardReport
    +requiredGlobalPermissionActions() : List<String>
    +execute() : String
  }

  class UserAdmin {
    -bean : CreateUserBean
    -authMethod : AuthMethod
    +requiredGlobalPermissionActions() : List<String>
    +execute() : String
    +edit() : String
  }

}

package "org.apache.roller.weblogger.ui.struts2.util" <<util>> {
  class UIAction {
    -authenticatedUser : User
    -actionWeblog : Weblog
    -weblog : String
    -actionName : String
    -desiredMenu : String
    -pageTitle : String
    -salt : String
    +myPrepare() : void
    +requiredWeblogPermissionActions() : List<String>
    +requiredGlobalPermissionActions() : List<String>
    +cancel() : String
    +addError(String errorKey) : void
    +addError(String errorKey, String param) : void
    +addError(String errorKey, List<?> args) : void
    +errorsExist() : boolean
  }

  class UIActionInterceptor {
    -log : Log
    +doIntercept(ActionInvocation invocation) : String
  }

  interface UIActionPreparable {
  }

  class UIActionPrepareInterceptor {
    -log : Log
    +doIntercept(ActionInvocation invocation) : String
  }

}

' Relationships
UIActionPreparable <|.. UIAction
UIAction <|-- GlobalCommentManagement
GlobalCommentManagement --> GlobalCommentManagementBean : bean
UIAction <|-- CacheInfo
UIAction <|-- UserAdmin
UIAction <|-- SiteSummary
SiteSummary --> DashboardReport : report
UIAction <|-- GlobalConfig
DashboardMetric <|.. TotalCommentsMetric
DashboardMetric <|.. TotalWeblogsMetric
DashboardMetric <|.. MostCommentedWeblogMetric
DashboardReportBuilder --> DashboardMetric : metrics
DashboardMetric <|.. TopCategoryMetric
DashboardMetric <|.. TotalUsersMetric
DashboardReport --> MetricResult : results
DashboardMetric <|.. MostStarredBlogMetric
DashboardMetric <|.. TotalEntriesMetric
DashboardMetric <|.. TopActiveUsersMetric

@enduml